Fixed z-index of header to override the navigation dots on home

--- a/app/styles/_global.scss
+++ b/app/styles/_global.scss
@@ -4,7 +4,7 @@ header {
 	padding: 	0 50px;
 	position: 	fixed;
 	width: 		100%;
-	z-index: 	1;
+	z-index: 	6;
 	top: 		0;
 	
 	@media (max-width: $screen-sm-min){
